Fix e2e tests - KameletBinding related failures update

--- a/cypress/fixtures/KafkaSourceSink.yaml
+++ b/cypress/fixtures/KafkaSourceSink.yaml
@@ -14,9 +14,11 @@ metadata:
 spec:
   source:
     ref:
+      apiVersion: camel.apache.org/v1alpha1
+      kind: Kamelet
       name: kafka-source
   sink:
     ref:
+      apiVersion: camel.apache.org/v1alpha1
+      kind: Kamelet
       name: kafka-sink
-      storage: true
-      version: v1alpha1
