--- a/renovate.json
+++ b/renovate.json
@@ -1,42 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:base",
-    ":dependencyDashboard"
-  ],
-  "schedule": [
-    "before 6am"
-  ],
-  "prCreation":"not-pending",
-  "packageRules": [
-    {
-      "groupName": "react monorepo",
-      "matchPackageNames": [
-        "@types/react",
-        "@types/react-dom"
-      ]
-    },
-    {
-      "groupName": "eslint",
-      "matchPackagePatterns": ["eslint"]
-    },
-    {
-      "groupName": "@kie-tools",
-      "matchPackagePatterns": ["@kie-tools"]
-    },
-    {
-      "groupName": "@kie-tools",
-      "matchPackagePatterns": ["@opentelemetry"]
-    },
-    {
-      "extends": "monorepo:storybook",
-      "groupName": "storybook monorepo",
-      "matchUpdateTypes": [
-        "digest",
-        "patch",
-        "minor",
-        "major"
-      ]
-    }
+    "github>KaotoIO/renovate-config"
   ]
 }
