--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "webpack serve --mode development --hot --progress --config webpack.dev.js ",
     "prod": "webpack serve --mode production --port 8080 --allowed-hosts all --progress --config webpack.prod.js ",
-    "build": "webpack --mode production --config webpack.prod.js",
+    "build": "yarn clean; webpack --mode production --config webpack.prod.js",
     "build:dev": "webpack --mode production --config webpack.dev.js",
     "build:lib": "rimraf dist/lib && yarn copy:css && yarn copy:images && tsc -p tsconfig.lib.json && node ./scripts/fixTsPathsAlias.js",
     "build:lib:watch": "tsc-watch --noClear -p tsconfig.lib.json",
@@ -129,7 +129,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.12",
     "eslint-plugin-testing-library": "5.11.0",
-    "file-loader": "^6.2.0",
     "file-selector": "^0.6.0",
     "html-webpack-plugin": "5.5.3",
     "jest": "29.5.0",
@@ -153,7 +152,6 @@
     "tsconfig-paths-webpack-plugin": "^4.0.1",
     "tslib": "^2.5.3",
     "typescript": "^5.1.3",
-    "url-loader": "4.1.1",
     "web-worker": "^1.2.0",
     "webpack": "5.88.0",
     "webpack-cli": "5.1.4",
