--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,7 +1,7 @@
 nodeLinker: node-modules
 
 # https://yarnpkg.com/configuration/yarnrc#enableScripts
-enableScripts: true
+enableScripts: false
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
