--- a/cypress/fixtures/IntegrationMultiFlow.yaml
+++ b/cypress/fixtures/IntegrationMultiFlow.yaml
@@ -1,27 +1,24 @@
 apiVersion: camel.apache.org/v1
 kind: Integration
 metadata:
-  name: 'Integration-1'
+  name: Integration-1
 spec:
   flows:
-  - from:
-      uri: cron:cron
-      parameters:
-        schedule: '1000'
-      steps:
-      - set-body:
-          simple: body
-      - to:
-          uri: log:log1
----
-apiVersion: camel.apache.org/v1
-kind: Integration
-metadata:
-  name: 'Integration-2'
-spec:
-  flows:
-  - from:
-      uri: timer:test
-      steps:
-      - to:
-          uri: log:log2
+  - route:
+      id: route-1234
+      from:
+        uri: cron:cron
+        parameters:
+          schedule: '1000'
+        steps:
+        - set-body:
+            simple: body
+        - to:
+            uri: log:log1
+  - route:
+      id: route-4321
+      from:
+        uri: timer:test
+        steps:
+        - to:
+            uri: log:log2
