--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
     "css-minimizer-webpack-plugin": "^5.0.1",
     "cypress": "12.17.1",
     "cypress-file-upload": "^5.0.8",
-    "dotenv-webpack": "8.0.1",
+    "dotenv": "^16.3.1",
     "eslint": "8.44.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-import": "^2.27.5",
